--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 appdirs==1.4.3
 cffi==1.10.0
+dj-static==0.0.6
 Django==1.11
 django-extensions==1.7.8
 greenlet==0.4.12
@@ -11,4 +12,5 @@ pyparsing==2.2.0
 pytz==2017.2
 readline==6.2.4.1
 six==1.10.0
+static3==0.7.0
 virtualenv==15.1.0
