--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appdirs==1.4.3
+APScheduler==3.3.1
 cffi==1.10.0
 dj-static==0.0.6
 Django==1.11
@@ -13,4 +14,5 @@ pytz==2017.2
 readline==6.2.4.1
 six==1.10.0
 static3==0.7.0
+tzlocal==1.4
 virtualenv==15.1.0
