--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ cffi==1.10.0
 dj-static==0.0.6
 Django==1.11
 django-extensions==1.7.8
+django-solo==1.1.2
 greenlet==0.4.12
 gunicorn==19.7.1
 packaging==16.8
